fix issue with z-index for ArticlePreview type icon

--- a/src/css/components/ArticlePreview.less
+++ b/src/css/components/ArticlePreview.less
@@ -28,7 +28,6 @@
     position: absolute;
     width: 30px;
     height: 30px;
-    z-index: 100;
     bottom: 0;
 }
 
@@ -43,12 +42,10 @@
 }
 
 .ArticlePreview__img {
-    //display: none;
     display: block;
     flex-basis: 90px;
     flex-grow: 0;
     flex-shrink: 0;
-    //background-color: #737373;
 
     img {
         height: 90px;
@@ -168,10 +165,13 @@
         flex-basis: 180px;
         flex-grow: 0;
         flex-shrink: 0;
-        //background-color: #737373;
 
         img {
             height: 180px;
         }
+    }
+
+    .ArticlePreview__article-type {
+        order: -1;
     }
 }
